config/actions-runner-controller/manifests/network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: arc-egress
  namespace: arc-systems
spec:
  podSelector: {}
  policyTypes: [Ingress, Egress]
  ingress: []
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
        - ipBlock:
            cidr: 10.43.0.10/32
      ports:
        - {protocol: UDP, port: 53}
        - {protocol: TCP, port: 53}
    - to:
        - ipBlock:
            cidr: 10.43.0.1/32
      ports:
        - {protocol: TCP, port: 443}
    - to:
        - ipBlock:
            cidr: 192.168.1.166/32
        - ipBlock:
            cidr: 192.168.1.173/32
        - ipBlock:
            cidr: 192.168.1.174/32
      ports:
        - {protocol: TCP, port: 6443}
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 100.64.0.0/10
              - 127.0.0.0/8
              - 169.254.0.0/16
              - 172.16.0.0/12
              - 192.168.0.0/16
      ports:
        - {protocol: TCP, port: 443}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: arc-egress
  namespace: arc-runners
spec:
  podSelector: {}
  policyTypes: [Ingress, Egress]
  ingress: []
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
        - ipBlock:
            cidr: 10.43.0.10/32
      ports:
        - {protocol: UDP, port: 53}
        - {protocol: TCP, port: 53}
    - to:
        - ipBlock:
            cidr: 10.43.0.1/32
      ports:
        - {protocol: TCP, port: 443}
    - to:
        - ipBlock:
            cidr: 192.168.1.166/32
        - ipBlock:
            cidr: 192.168.1.173/32
        - ipBlock:
            cidr: 192.168.1.174/32
      ports:
        - {protocol: TCP, port: 6443}
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 100.64.0.0/10
              - 127.0.0.0/8
              - 169.254.0.0/16
              - 172.16.0.0/12
              - 192.168.0.0/16
      ports:
        - {protocol: TCP, port: 443}
